<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<EditText
		android:id="@+id/editTextName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/hint_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<EditText
		android:id="@+id/editTextSecondName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/hint_second_name"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextName"/>

	<EditText
		android:id="@+id/editTextNumberOfPhone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints=""
		android:inputType="phone"
		android:ems="10"
		android:hint="@string/hint_number_of_phone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextSecondName"/>
</androidx.constraintlayout.widget.ConstraintLayout>