<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".ui.MainActivity">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/cardView"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_56"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:text="@string/app_name"
			android:textColor="@color/black"
			android:textSize="@dimen/text_size_20"/>
		<ToggleButton
			android:id="@+id/deleteToggleButton"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="end"
			android:layout_margin="@dimen/margin_10"
			android:minWidth="30dp"
			android:minHeight="30dp"
			android:textOn="@null"
			android:textOff="@null"
			android:background="@drawable/ic_button_delete_selector"
		/>
	</com.google.android.material.card.MaterialCardView>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rcView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintTop_toBottomOf="@+id/cardView"
		app:layout_constraintBottom_toBottomOf="parent"
		tools:listitem="@layout/item_list"/>

	<Button
		android:id="@+id/buttonAddItem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:textSize="30sp"
		android:text="@string/plus_text"
		android:minHeight="50dp"
		android:minWidth="50dp"
		android:padding="0dp"
		android:background="@drawable/ic_button_shape"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<Button android:id="@+id/buttonDelete"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/delete_text"
		android:backgroundTint="@color/red"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<Button
		android:id="@+id/buttonCancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/cancel_text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/buttonDelete"/>
</androidx.constraintlayout.widget.ConstraintLayout>